<resources>
    <string name="app_name">tarcomm</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="news"><![CDATA[News & Announcements]]></string>
    <string name="complaint">Complaint</string>
    <string name="confess">Confession</string>
    <string name="feedback"><![CDATA[Help & Feedback]]></string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
</resources>
