<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.user.tarcomm.complain">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText"
        android:hint="@string/title" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText2"
        android:hint="@string/description" />

    <TextView
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        tools:text="@string/location" />

</RelativeLayout>
